@@ -1,29 +1,5 @@
 package com.springboot.form.app.controllers;
 
-import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import javax.validation.Valid;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.propertyeditors.CustomDateEditor;
-import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
-import org.springframework.validation.BindingResult;
-import org.springframework.web.bind.WebDataBinder;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.InitBinder;
-import org.springframework.web.bind.annotation.ModelAttribute;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.SessionAttribute;
-import org.springframework.web.bind.annotation.SessionAttributes;
-import org.springframework.web.bind.support.SessionStatus;
-
 import com.springboot.form.app.editors.NombreMayusculaEditor;
 import com.springboot.form.app.editors.PaisPropertyEditor;
 import com.springboot.form.app.editors.RolesEditor;
@@ -33,25 +9,33 @@ import com.springboot.form.app.models.domain.Usuario;
 import com.springboot.form.app.services.PaisService;
 import com.springboot.form.app.services.RoleService;
 import com.springboot.form.app.validation.UsuarioValidador;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.propertyeditors.CustomDateEditor;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
+import org.springframework.web.bind.WebDataBinder;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.support.SessionStatus;
+
+import javax.validation.Valid;
+import java.text.SimpleDateFormat;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
 
 @Controller
 @SessionAttributes("usuario")
+@RequiredArgsConstructor
 public class FormController {
 
-	@Autowired
-	private UsuarioValidador validador;
-	
-	@Autowired
-	private PaisService paisService;
-	
-	@Autowired
-	private RoleService roleService;
-	
-	@Autowired
-	private PaisPropertyEditor paisEditor;
-	
-	@Autowired
-	private RolesEditor roleEditor;
+	private static final String TITULO = "titulo";
+	private final UsuarioValidador validador;
+	private final PaisService paisService;
+	private final RoleService roleService;
+	private final NombreMayusculaEditor nombreMayusculaEditor;
+	private final PaisPropertyEditor paisEditor;
+	private final RolesEditor roleEditor;
 
 	@InitBinder
 	public void initBinder(WebDataBinder binder) {
@@ -60,8 +44,8 @@ public class FormController {
 		dateFormat.setLenient(false);
 		binder.registerCustomEditor(Date.class, "fechaNacimiento", new CustomDateEditor(dateFormat, true));
 
-		binder.registerCustomEditor(String.class, "nombre", new NombreMayusculaEditor());
-		binder.registerCustomEditor(String.class, "apellido", new NombreMayusculaEditor());
+		binder.registerCustomEditor(String.class, "nombre", nombreMayusculaEditor);
+		binder.registerCustomEditor(String.class, "apellido", nombreMayusculaEditor);
 		
 		binder.registerCustomEditor(Pais.class, "pais", paisEditor);
 		binder.registerCustomEditor(Role.class, "roles", roleEditor);
@@ -82,43 +66,6 @@ public class FormController {
 		return paisService.listar();
 	}
 
-	@ModelAttribute("listaRolesString")
-	public List<String> listaRolesString(){
-		List<String> roles = new ArrayList<>();
-		roles.add("ROLE_ADMIN");
-		roles.add("ROLE_USER");
-		roles.add("ROLE_MODERATOR");
-		return roles;
-	}
-	
-	@ModelAttribute("listaRolesMap")
-	public Map<String, String> listaRolesMap() {
-		Map<String, String> roles = new HashMap<String, String>();
-		roles.put("ROLE_ADMIN", "Administrador");
-		roles.put("ROLE_USER", "Usuario");
-		roles.put("ROLE_MODERATOR", "Moderador");
-
-		return roles;
-	}
-	
-	@ModelAttribute("paises")
-	public List<String> paises() {
-		return Arrays.asList("España", "México", "Chile", "Argentina", "Perú", "Colombia", "Venezuela");
-	}
-
-	@ModelAttribute("paisesMap")
-	public Map<String, String> paisesMap() {
-		Map<String, String> paises = new HashMap<String, String>();
-		paises.put("ES", "España");
-		paises.put("MX", "México");
-		paises.put("CL", "Chile");
-		paises.put("AR", "Argentina");
-		paises.put("PE", "Perú");
-		paises.put("CO", "Colombia");
-		paises.put("VE", "Venezuela");
-		return paises;
-	}
-
 	@GetMapping("/form")
 	public String form(Model model) {
 		Usuario usuario = new Usuario();
@@ -127,10 +74,10 @@ public class FormController {
 		usuario.setIdentificador("12.456.789-K");
 		usuario.setHabilitar(true);
 		usuario.setValorSecreto("Algún valor secreto ****");
-		usuario.setPais(new Pais(3, "CL", "Chile"));
-		usuario.setRoles(Arrays.asList(new Role(2, "Usuario", "ROLE_USER")));
+		usuario.setPais(listaPaises().get(2));
+		usuario.setRoles(List.of(listaRoles().get(1)));
 		
-		model.addAttribute("titulo", "Formulario usuarios");
+		model.addAttribute(TITULO, "Formulario usuarios");
 		model.addAttribute("usuario", usuario);
 		return "form";
 	}
@@ -138,10 +85,8 @@ public class FormController {
 	@PostMapping("/form")
 	public String procesar(@Valid Usuario usuario, BindingResult result, Model model) {
 
-		// validador.validate(usuario, result);
-
 		if (result.hasErrors()) {
-			model.addAttribute("titulo", "Resultado form");
+			model.addAttribute(TITULO, "Resultado form");
 			return "form";
 		}
 		
@@ -155,7 +100,7 @@ public class FormController {
 			return "redirect:/form";
 		}
 		
-		model.addAttribute("titulo", "Resultado form");
+		model.addAttribute(TITULO, "Resultado form");
 		
 		status.setComplete();
 		return "resultado";
